# HRC_robot

./: README.md  requirements.txt
Universal_Robots_ROS_Driver/ur_robot_driver/resources/rs485-1.0/com/fzi/rs485/impl/daemon/: daemon-rs485.py
Universal_Robots_ROS_Driver/ur_robot_driver/scripts/: tool_communication
Universal_Robots_ROS_Driver/ur_robot_driver/test/: integration_test.py
pycontrol/: setup.py
pycontrol/scripts/: listener.py  ros_cart.py  ros_demo.py  ros_joint.py  talker.py
pycontrol/src/pycontrol/: camera.py  conveyor.py  gripper.py  robot.py  sensor.py
robotiq_85_gripper/robotiq_85_bringup/launch/: robotiq_85.launch
robotiq_85_gripper/robotiq_85_driver/src/robotiq_85/: gripper_io.py  robotiq_85_driver.py  robotiq_85_gripper.py  robotiq_85_gripper_test.py
robotiq_85_gripper/robotiq_85_simulation/roboticsgroup_gazebo_plugins/src/: mimic_joint_plugin.cpp
vention_conveyor/vention_conveyor_driver/: setup.py
yolov5_ros/yolo_msgs/: CMakeLists.txt  package.xml
yolov5_ros/yolo_msgs/msg/: yolo.msg
yolov5_ros/yolo_run/: CMakeLists.txt  package.xml
yolov5_ros/yolo_run/launch/: yolov5.launch
yolov5_ros/yolo_run/src/: detect.py
yolov5_ros/yolo_run/src/models/: common.py  yolo.py
yolov5_ros/yolo_run/src/utils/: benchmarks.py  dataloaders.py  general.py
